# uav_simulator

./: .gitattributes  LICENSE  README.md
111.txt/: 111.txt
uav_control/: CMakeLists.txt  package.xml
uav_control/config/: pid_controller.yaml  tricopter.yaml
uav_control/include/: iwp_claw_node.hpp  iwp_mavros.hpp  uav_pid_control_node.h
uav_control/include/vectortricopter/: att_controller.hpp  control_allocator.hpp  pos_controller.hpp  rate_controller.hpp  scheduler.hpp  vehicle.hpp  world.hpp
uav_control/include/vectortricopter/msg/: setpoints.hpp
uav_control/launch/: iwp_claw.launch  pid_controller_node.launch
uav_control/src/: iwp_claw_node.cpp  iwp_mavros_node.cpp  pid_control.cpp  tricopter_control_node.cc  uav_pid_control_node.cpp
uav_control/src/vectortricopter/: att_controller.cc  control_allocator.cc  pos_controller.cc  rate_controller.cc  scheduler.cc  vehicle.cc  world.cc
uav_gazebo/: CMakeLists.txt  package.xml
uav_gazebo/launch/: iwp.sh  mav.launch  spawn.launch  spawn_iwp.launch  spawn_iwp_down.launch  spawn_mav.launch  spawn_tsd_c1.launch  spawn_tsd_quad.launch  spawn_tsd_t4.launch  spawn_tsduav_c1.launch  spawn_tsduav_quad.launch
uav_gazebo/models/arduwoodpecker/: model copy.rsdf  model.rsdf  model.sdf  readme.md
uav_gazebo/models/arduwoodpecker_batt/: model.rsdf  model.sdf
uav_gazebo/models/arduwoodpecker_claw/: model.rsdf  model.sdf
uav_gazebo/models/arduwoodpecker_claw_base/: model.config  model.rsdf  model.sdf
uav_gazebo/models/arduwoodpecker_claw_flange/: model.config  model.rsdf  model.sdf
uav_gazebo/worlds/: arduiris.world  arduiwp.world  arduwoodpecker_demo.world  double_mix_uav.rsdf  follow_uav.world  follow_uav_green.world  follow_uav_mix_multi.rsdf  follow_uav_mix_multi.world  follow_uav_mix_multi_2.world  follow_uav_mix_multi_3 copy.world  follow_uav_multi.rsdf  follow_uav_multi.world  follow_uav_multi_white.world  follow_uav_white.world  nonplant_hex.world  pendulum_quadcopter.world  quadcopter.world  quadruped_ck.world  tilt_quadcopter.world  tilt_quadcopter_armbot.world  tilt_tricopter.world  tilt_tricopter_fix.world  tsd_quad.rsdf  tsd_quad.world  tsd_quad_multi.rsdf  tsd_quad_multi.world  tsd_t4.world  tsduav_c1.world  tsduav_c2.world  tsduav_quad.world  tsduav_t4.world  tsduav_t4_nosaw.world  tsduav_t4_old.world  tsduav_t4_test.world  uni350.world  uni350_multi.rsdf  uni350_multi.world  usl_balanceTailsitter.world  usl_balancebot.world  usl_bicopter.world  (+10 more)
uav_gazebo_plugin/: CMakeLists.txt  package.xml
uav_gazebo_plugin/include/: ArduRotorBV2.hh  ArduRotorBalanceTailsitter.hh  ArduRotorBalancebotPlugin.hh  ArduRotorBicopter.hh  ArduRotorNormPlugin.hh  ArduRotorOctBoxPlugin.hh  ArduRotorQuadruped.hh  ArduRotorQuadrupedBicopter.hh  ArduRotorQuadruped_ck.hh  ArduRotorTiltPIDPlugin.hh  ArduRotorTiltPlugin.hh  ArduRotorTiltQuadcopter.hh  ArduRotorTiltQuadcopterArm.hh  ArduRotorTiltTricopter.hh  HelloModelPlugin.hh  HelloWorldPlugin.h  MotorsPlugin.hh  MyBalancebotPlugin.hh  rotors_model.hh
uav_gazebo_plugin/src/: ArduRotorBV2.cc  ArduRotorBalanceTailsitter.cc  ArduRotorBalancebotPlugin.cc  ArduRotorBicopter.cc  ArduRotorNormPlugin.cc  ArduRotorOctBoxPlugin.cc  ArduRotorQuadOctPlugin.cc  ArduRotorQuadruped.cc  ArduRotorQuadrupedBicopter.cc  ArduRotorQuadruped_ck.cc  ArduRotorTiltPIDPlugin.cc  ArduRotorTiltPlugin.cc  ArduRotorTiltQuadcopter.cc  ArduRotorTiltQuadcopterArm.cc  ArduRotorTiltTricopter.cc  HelloModelPlugin.cc  HelloWorldPlugin.cc  MotorsPlugin.cc  MyBalancebotPlugin.cc  PoleHoldReleasePlugin.cc  PoleMavlinkPosePlugin.cc  position_controller.cc  rotors_model.cc
(+620 files in other folders)
